Fixed modal dialog hight occured due to Header z-index increament

--- a/frontend/web/rainmaker/dev-packages/egov-ui-kit-dev/src/assets/styles/app.scss
+++ b/frontend/web/rainmaker/dev-packages/egov-ui-kit-dev/src/assets/styles/app.scss
@@ -548,4 +548,7 @@ body.employee-user-profile {
 
 div[role="dialog"] {
   z-index: 1501;
+  div[role="document"] {
+    max-height: calc(100% - 150px);
+  }
 }
